force-app/main/default/objects/Data_Sync_Job_Config__c/Data_Sync_Job_Config__c.object-meta.xml
<CustomObject>
    <label>Data Sync Job Config</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Sync Job Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>