force-app/main/default/objects/Data_Sync_Job_Config__c/fields/Callout_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Callout_Class_Name__c</fullName>
    <label>Callout Class Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DataSyncCallout</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>