force-app/main/default/objects/Data_Sync_Job_Config__c/fields/Current_Page_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Current_Page_Field_Name__c</fullName>
    <inlineHelpText>When requesting paged data... this is the field name to pass like page 1, 2, 3, etc.</inlineHelpText>
    <label>Current Page Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>