force-app/main/default/objects/Data_Sync_Job_Config__c/fields/Processor_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Processor_Class_Name__c</fullName>
    <label>Processor Class Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DataSyncProcessor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>