force-app/main/default/objects/Data_Sync_Job_Config__c/fields/Response_Is_Paged__c.field-meta.xml
<CustomField>
    <fullName>Response_Is_Paged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Response Is Paged</label>
    <type>Checkbox</type>
</CustomField>