force-app/main/default/objects/Data_Sync_Job_Config__c/fields/Response_Paged_Array_Path__c.field-meta.xml
<CustomField>
    <fullName>Response_Paged_Array_Path__c</fullName>
    <inlineHelpText>Put location Of attribute where we do pagination</inlineHelpText>
    <label>Response Paged Array Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>