force-app/main/default/objects/Data_Sync_Job_Config__c/fields/Rows_Per_Page__c.field-meta.xml
<CustomField>
    <fullName>Rows_Per_Page__c</fullName>
    <label>Rows Per Page</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>