force-app/main/default/objects/Data_Sync_Job_Config__c/fields/Rows_Per_Page_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Rows_Per_Page_Field_Name__c</fullName>
    <label>Rows Per Page Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>