force-app/main/default/objects/Data_Sync_Job_Config__c/fields/Salesforce_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Object_Name__c</fullName>
    <label>Salesforce Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>