force-app/main/default/objects/Data_Sync_Job_Config__c/fields/Service_Path__c.field-meta.xml
<CustomField>
    <fullName>Service_Path__c</fullName>
    <inlineHelpText>for example /v1/Patient</inlineHelpText>
    <label>Service Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>