force-app/main/default/objects/Data_Sync_Job_Config__c/fields/Service_Path_Id_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Path_Id_Field_Name__c</fullName>
    <inlineHelpText>The field name used to replace the value of {id} in the url.</inlineHelpText>
    <label>Service Path Id Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>