force-app/main/default/objects/Data_Sync_Job_Config__c/fields/Total_Record_Path__c.field-meta.xml
<CustomField>
    <fullName>Total_Record_Path__c</fullName>
    <label>Total Record Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>