force-app/main/default/objects/Data_Sync_Job_Config__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Response_Is_Paged__c</columns>
    <columns>Response_Paged_Array_Path__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>